# duckdb-ext-file-dialog

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: MainDistributionPipeline.yml
src/: lib.rs
