[package]
name = "file_dialog"
version = "0.0.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "file_dialog"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.3.2", features = [
    "vscalar",
    "vscalar-arrow",
    "vtab-arrow",
] }
duckdb-loadable-macros = "0.1.9"
libduckdb-sys = { version = "1.3.0", features = ["loadable-extension"] }
rfd = "0.15.4"
